docs: added more documentation pages. extracted stylesheets and javascript to static files.